# Py16-web-hw05

./: client_exchange_simple.py  client_exchange_tasks.py  pyproject.toml
chat_websocket/: log.txt  server_exchange_days.py  server_exchange_default.py
