[tool.poetry]
name = "py16-web-hw05"
version = "0.1.0"
description = "Сonsole utility exchange"
authors = ["Maximus-22 <maksim.melnichenko@nservice.com.ua>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
